manifests/bluegreen-www/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-www-active
  namespace: bluegreen-test
spec:
  selector:
    app: bluegreen-www
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-www-preview
  namespace: bluegreen-test
spec:
  selector:
    app: bluegreen-www
  ports:
  - name: http
    port: 80
    targetPort: 80
