manifests/bluegreen-www/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-www
  namespace: bluegreen-test
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: bluegreen.kind.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-www-active
            port:
              name: http
  - host: preview-bluegreen.kind.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-www-preview
            port:
              name: http
